    as per in toolbar.
10. Update current player status if click on it's name in navigation drawer.
11. Fix playing playlists, artists, and albums, from favourites.
12. Fix 'Go to composer', etc., sometimes not showing in now-playing menu for
    LMS9.0.1+
13. If have multiple artists, composers, etc. then prompt for which to go to
    when using now-playing menu.

5.7.1
-----
 1. Change 'Show composer' option from boolean to; 'No', 'Classical genres',
    'All genres'.
 2. Allow now-playing portrait image to be larger.
 3. Fix URL parsing - thanks to Michael Herger.
 4. Fix sorting of albums list if it contains a Works section.
 5. Fix Works albums list subtitle pluralisation.
 6. Fix sync and sleep dialogs not being scrollable on touch devices.
 7. Fix sort-descending toggle - thanks to Darrell.
 8. In desktop layout, show expanded now-playing when clicking bar image even if
    MAI showing.
 9. Fix reloading of bliss mix if reload action activated following 'Create
    mix'.
10. Remove use of custom select library, its breaking too many things.
11. Fix file selector buttons not added on subsequent showing of 'Server'
    settings.
12. Fix SVG icon colour in 'Extras', 'Server' settings, and extra player
    settings pages.
13. Add icon mapping for 'WiiM Player'.
14. Fix progress bar in desktop layout when used on mobile and coloured
    toolbars.
15. Only set group filter for tracks that have a grouping.
16. If grouping tracks of album and some have no group then use 'Other'.

5.7.0
-----
 1. Use LMS 9.0.1's 'isClassical' attribute to determine if composer, conductor,
    and/or band should be shown (when relevant option is enabled) - instead of
    using Material specific genre lists.
 2. For remote streams, if genre(s) is empty/undefined then show composer,
    conductor, or band if relevant option is enabled (i.e. skip genre check).
 3. Group album tracks by works, or other groupings.
 4. Add grouping support to album style queue.